--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
   
     </video>
 
- <div class="overlay"></div>
+    <nav>
+        <ul class="nav-links" id="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#login">Log In/Register</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+<div class="overlay"></div>
 
     <div class="hero">
         <h1>Welcome To My Halloween Countdown</h1>
