--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#login">Log In/Register</a></li>
+            <li><a href="LogInPage.html" id="login-link">Log In/Register</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
