--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   
     </video>
 
-    <nav>
-        <ul class="nav-links" id="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="LogInPage.html" id="login-link">Log In/Register</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+            <nav>
+                <ul>
+                    <li><a href="/index.html" id="home-link">Home</a></li>
+                    <li><a href="/Pages/LogInPage.html" id="login-link">Login/Register</a></li>
+                    <li><a href="#about">About</a></li>   
+                    <li><a href="#contact">Contact</a></li> 
+                </ul>
+            </nav>
+    </header>
 
 <div class="overlay"></div>
 
