--- a/Pages/LogInPage.html
+++ b/Pages/LogInPage.html
@@ -11,7 +11,8 @@
             <nav>
                 <ul>
                     <li><a href="/index.html" id="home-link">Home</a></li>
-                    <li><a href="/Pages/LogInPage.html" id="login-link">Login/Register</a></li>
+                    <li><a href="/Pages/LogInPage.html" id="login-link">Login</a></li>
+                    <li><a href="/Pages/Register.html" id="register-link">Register</a></li>
                     <li><a href="#about">About</a></li>   
                     <li><a href="#contact">Contact</a></li> 
                 </ul>
