--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>SBA 316</title>
+    <title>Autumn Place</title>
 </head>
 <body>
     <video autoplay muted loop playsinline id="bg-video">
@@ -16,7 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="/index.html" id="home-link">Home</a></li>
-                    <li><a href="/Pages/LogInPage.html" id="login-link">Login/Register</a></li>
+                    <li><a href="/Pages/LogInPage.html" id="login-link">Login</a></li>
+                    <li><a href="/Pages/Register.html" id="register-link">Register</a></li>
                     <li><a href="#about">About</a></li>   
                     <li><a href="#contact">Contact</a></li> 
                 </ul>
