Learned something new

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="/index.html" id="home-link">Home</a></li>
                     <li><a href="/Pages/LogInPage.html" id="login-link">Login</a></li>
-                    <li><a href="/Pages/Register.html" id="register-link">Register</a></li>
+                    <li><a href="/Pages/Register.html" id="register-link">Sign Up</a></li>
                     <li><a href="#about">About</a></li>   
                     <li><a href="#contact">Contact</a></li> 
                 </ul>
