--- a/Pages/LogInPage.html
+++ b/Pages/LogInPage.html
@@ -37,7 +37,7 @@
         <button type="submit" class="btn">Login</button>
 
         <div class="register-link">
-            <p>Don't have an account?<a href="#">Register</a></p>
+            <p>Don't have an account?<a href="/Pages/Register.html">Register</a></p>
         </div>
     </form>
    </div>
