--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -19,6 +19,30 @@
             </nav>
       </header>
 
+
+    <div class="wrapper">
+        <h1>Sign Up</h1>
+        <form action="">
+            <div>
+                <label for="firstname-input"></label>
+                <input type="text" name="firstname" id="firstname-input" placeholder="First Name">
+            </div>
+            <div>
+                <label for="email-input">
+                    <span>@</span>
+                </label>
+                <input type="text" name="email" id="email-input" placeholder="Email">
+            </div>
+            <div>
+                <input type="text" name="password" id="password-input" placeholder="Password">
+            </div>
+            <div>
+                <input type="text" name="repeat-password" id="repeat-password-input" placeholder="Repeat Password">
+            </div>
+            <button type="submit">Sign Up</button>
+        </form>
+        <p>Already have an acccount?<a href="/Pages/LogInPage.html">Login</a></p>
+    </div>   
 <script src="/JS.js/Register.js"></script>
 </body>
 </html>
