--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -22,21 +22,23 @@
 
     <div class="wrapper">
         <h1>Sign Up</h1>
-        <form action="">
+        <form>
             <div>
-                <label for="firstname-input"></label>
+                <label for="firstname-input"><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/person-male.png" alt="person-male"/></label>
                 <input type="text" name="firstname" id="firstname-input" placeholder="First Name">
             </div>
             <div>
-                <label for="email-input">
+                <label for="email-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/new-post.png" alt="new-post"/>
                     <span>@</span>
                 </label>
                 <input type="text" name="email" id="email-input" placeholder="Email">
             </div>
             <div>
+                <label for="password-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
                 <input type="text" name="password" id="password-input" placeholder="Password">
             </div>
             <div>
+                <label for="repeat-password-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
                 <input type="text" name="repeat-password" id="repeat-password-input" placeholder="Repeat Password">
             </div>
             <button type="submit">Sign Up</button>
