Going to merge the login page and register page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop playsinline id="bg-video">
-        <source src="./Images/halloween_video1.mp4" type="video/mp4">
+        <source src="./Images/HalloweenVideo2.mp4" type="video/mp4">
   
     </video>
 
