--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li><a href="/index.html" id="home-link">Home</a></li>
                     <li><a href="/Pages/LogInPage.html" id="login-link">Login</a></li>
-                    <li><a href="/CSS/Register.css" id="register-link">Register</a></li>
+                    <li><a href="/Pages/Register.html" id="register-link">Register</a></li>
                     <li><a href="#about">About</a></li>   
                     <li><a href="#contact">Contact</a></li> 
                 </ul>
@@ -22,23 +22,23 @@
 
     <div class="wrapper">
         <h1>Sign Up</h1>
-        <form>
-            <div>
+        <p id="error-message"></p>
+        <form id="form">
+            <div class="incorrect">
                 <label for="firstname-input"><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/person-male.png" alt="person-male"/></label>
                 <input type="text" name="firstname" id="firstname-input" placeholder="First Name">
             </div>
             <div>
-                <label for="email-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/new-post.png" alt="new-post"/>
-                    <span>@</span>
+                <label for="email-input"><img width="30" height="30" src="https://img.icons8.com/ios/50/new-post.png" alt="new-post"/>
                 </label>
                 <input type="text" name="email" id="email-input" placeholder="Email">
             </div>
             <div>
-                <label for="password-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
+                <label for="password-input"><img width="30" height="30" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
                 <input type="text" name="password" id="password-input" placeholder="Password">
             </div>
             <div>
-                <label for="repeat-password-input"><img width="50" height="50" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
+                <label for="repeat-password-input"><img width="30" height="30" src="https://img.icons8.com/ios/50/lock--v1.png" alt="lock--v1"/></label>
                 <input type="text" name="repeat-password" id="repeat-password-input" placeholder="Repeat Password">
             </div>
             <button type="submit">Sign Up</button>
